# flowing

./: CMakeLists.txt  README.md
include/: .Community.h.swp  BufferPool.h  Community.h  CommunityStructure.h  Flowing.h  StreamGraph.h  Types.h
source/: .main.cpp.swp  BufferPool.cpp  Community.cpp  StreamGraph.cpp  main.cpp
