CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(flowing CXX)

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -pg -Wall")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_DEBUG} -O3 -Wall")


INCLUDE_DIRECTORIES(./include)
FILE( GLOB_RECURSE SOURCE_FILES "source/*" )
ADD_EXECUTABLE(flowing ${SOURCE_FILES})  
