CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(flowing CXX)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -pg -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Wall")


INCLUDE_DIRECTORIES(./include)
FILE( GLOB_RECURSE SOURCE_FILES "source/*" )
ADD_EXECUTABLE(flowing ${SOURCE_FILES})  
